# stroli-api

./: .gitignore  Cargo.toml  README.md
dbschema/: default.esdl
dbschema/migrations/: 00001-m1n3mig.edgeql  00002-m1mqc2w.edgeql  00003-m1zzejp.edgeql
src/lib/: lib.rs  startup.rs
src/lib/application/commands/: create_item_command.rs  delete_item_command.rs  mod.rs  person_commands.rs  update_item_command.rs
src/lib/application/queries/: get_all_items_query.rs  get_item_by_id_query.rs  mod.rs  person_queries.rs
src/lib/auth/: constants.rs  handlers.rs  keys.rs  mod.rs  models.rs  pkce.rs  service.rs  token.rs  utils.rs  validate_session.rs
src/lib/database/: connect.rs
src/lib/database/schema/: profiles.surql  token.surql
src/lib/domain/: app_secrets.rs  app_state.rs  items_entries.rs  mod.rs  person.rs  secrets.rs  state.rs  types.rs
src/lib/domain/models/: item.rs  kafka.rs  mod.rs  person.rs
src/lib/domain/repositories/: item_repository.rs  mod.rs  person_repository.rs
src/lib/errors/: api_errors.rs  auth_errors.rs  mod.rs
src/lib/handlers/: health_check.rs
src/lib/infrastructure/: db.rs  errors.rs  mod.rs  s3.rs
src/lib/infrastructure/data/db/: connect.rs
src/lib/infrastructure/data/db/schema/: auth.surql  posts.surql  roles.surql  schema.surql  strolli.surql  users.surql
src/lib/infrastructure/data/repositories/: mod.rs
src/lib/infrastructure/kafka/: consumer.rs  handlers.rs  mod.rs  producer.rs  queries.rs
src/lib/queries/: items.rs
src/lib/services/auth/: commands.rs  cookie.rs  error.rs  handlers.rs  keys.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
src/lib/services/auth/middleware/: authorization.rs  error.rs  mod.rs  mw_auth.rs  util.rs
src/lib/services/auth/utils/: error.rs  mod.rs  sign.rs  verify.rs
