[package]
name = "stroli-api"
version = "0.1.0"
edition = "2021"
description = "The API for the Stroli app, hosted on Shuttle"
readme = "README.md"
authors = ["Dre Johnson", "<dre@phreshr.com"]
repository = "https://github.com/drejohnson/stroli-api"
license = "MIT"
publish = false

[[bin]]
name = "stroli-api"
path = "src/bin/httpd.rs"

[lib]
name = "stroli_api_lib"
path = "src/lib/lib.rs"

[dependencies]
async-trait = "0.1.71"
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.1.8", features = [
  "hardcoded-credentials",
] }
aws-sdk-mediaconvert = "1.25.0"
aws-sdk-mediatailor = "1.24.0"
aws-sdk-s3 = { version = "1.23.0", features = ["behavior-version-latest"] }
axum = "0.7.4"
axum-macros = "0.4.1"
axum-extra = { version = "0.9.3", features = [
  "typed-header",
  "cookie-private",
] }
futures = "0.3.30"
http = "1.0.0"
image = "0.25.1"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rdkafka = { version = "0.36.2", features = ["cmake-build", "ssl", "sasl"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
surrealdb = { version = "1.4.2", features = ["protocol-ws", "protocol-http"] }
thiserror = "1.0.58"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "normalize-path", "fs"] }
tower-layer = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
url = "2.5.0"
