[package]
name = "stroli-api"
version = "0.1.0"
edition = "2021"
description = "The API for the Stroli app, hosted on Shuttle"
readme = "README.md"
authors = ["Dre Johnson", "<dre@phreshr.com"]
repository = "https://github.com/drejohnson/stroli-api"
license = "MIT"
publish = false

[[bin]]
name = "stroli-api"
path = "src/bin/httpd.rs"

[lib]
name = "stroli_api_lib"
path = "src/lib/lib.rs"

[dependencies]
async-trait = "0.1.80"
aws-config = { version = "1.4.0", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.0", features = [
  "hardcoded-credentials",
] }
aws-sdk-mediaconvert = "1.28.0"
aws-sdk-mediatailor = "1.27.0"
aws-sdk-s3 = { version = "1.29.0", features = ["behavior-version-latest"] }
axum = "0.7.5"
axum-macros = "0.4.1"
axum-extra = { version = "0.9.3", features = [
  "typed-header",
  "cookie-private",
] }
futures = "0.3.30"
http = "1.1.0"
image = "0.25.1"
jsonwebtoken = "9.3.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
surrealdb = { version = "1.5.0", features = ["protocol-ws", "protocol-http"] }
thiserror = "1.0.61"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = [
  "cors",
  "normalize-path",
  "fs",
  "trace",
] }
tower-layer = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
